feat(S3-14): add ranking and filtering services for TA candidates