@@ -5,6 +5,7 @@ import com.sfgroup81.tams.model.UserRole;
 import com.sfgroup81.tams.repository.ApplicantProfileCsvRepository;
 import com.sfgroup81.tams.repository.InternalReferralCsvRepository;
 import com.sfgroup81.tams.repository.PositionCsvRepository;
+import com.sfgroup81.tams.repository.ResumeFileCsvRepository;
 import com.sfgroup81.tams.repository.TAApplicationCsvRepository;
 import com.sfgroup81.tams.repository.TAFeedbackCsvRepository;
 import com.sfgroup81.tams.repository.UserCsvRepository;
@@ -29,6 +30,7 @@ class CandidateInsightServiceTest {
         PositionCsvRepository positionRepository = new PositionCsvRepository(tempDir);
         ApplicantProfileCsvRepository profileRepository = new ApplicantProfileCsvRepository(tempDir);
         TAApplicationCsvRepository applicationRepository = new TAApplicationCsvRepository(tempDir);
+        ResumeFileCsvRepository resumeRepository = new ResumeFileCsvRepository(tempDir);
 
         userRepository.saveNewUser("TA Nora", "20250021", "nora@example.com", SecurityUtil.sha256("password123"), UserRole.TA);
         userRepository.saveNewUser("MO Lin", "90011", "mo@example.com", SecurityUtil.sha256("password123"), UserRole.MO);
@@ -76,6 +78,9 @@ class CandidateInsightServiceTest {
                 "2026-03-29T09:00:00",
                 "2026-03-29T09:00:00"
         ));
+        Path resumeFile = tempDir.resolve("nora_resume.pdf");
+        Files.writeString(resumeFile, "resume");
+        resumeRepository.saveOrUpdate("APP-U0001-P0001", resumeFile.toString(), "PDF", "nora_resume.pdf");
 
         CandidateInsightService service = new CandidateInsightService(
                 applicationRepository,
@@ -83,16 +88,21 @@ class CandidateInsightServiceTest {
                 profileRepository,
                 positionRepository,
                 new InternalReferralCsvRepository(tempDir),
-                new TAFeedbackCsvRepository(tempDir)
+                new TAFeedbackCsvRepository(tempDir),
+                resumeRepository
         );
 
         service.tagInternalReferral("U0001", "Prof. Zhao", "Worked together in lab", "U0002");
+        service.tagInternalReferral("U0001", "Prof. Tan", "Excellent demo helper", "U0002");
         CandidateExportResult result = service.exportCandidates("P0001", tempDir.resolve("exports"));
+        CandidateExportResult resumeResult = service.exportResumes("P0001", tempDir.resolve("exports"));
 
         assertTrue(Files.exists(result.filePath()));
         assertTrue(result.filePath().getFileName().toString().startsWith("Construction_TA_Candidates_"));
         assertTrue(Files.readString(result.filePath()).contains("Name,Student ID,Major,Skills,Application Time"));
+        assertTrue(Files.isDirectory(resumeResult.filePath()));
+        assertEquals(1, resumeResult.rowCount());
         assertEquals(1, service.listCandidatesForPosition("P0001", true).size());
-        assertEquals("Prof. Zhao", service.listCandidatesForPosition("P0001", true).getFirst().referral().orElseThrow().recommenderName());
+        assertEquals("Prof. Zhao; Prof. Tan", service.listCandidatesForPosition("P0001", true).get(0).referral().orElseThrow().displayRecommenders());
     }
 }
